--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .nav-link {
+        @apply text-gray-600 hover:text-gray-900 transition duration-300;
+    }
+}
