--- a/src/output.css
+++ b/src/output.css
@@ -58,7 +58,7 @@ nav {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.hero video {
+.hero img {
   position: absolute;
   top: 0;
   left: 0;
@@ -67,16 +67,18 @@ nav {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -2;
+  transform: scale(1);
+  transition: transform 0.7s ease-out;
   --tw-brightness: brightness(.9);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.hero:hover video {
-  transform: scale(1);
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 700ms;
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+.hero:hover img {
+  transform: scale(1.05);
+}
+
+.hero.scrolled img {
+  transform: scale(1.1);
 }
 
 .hero h1 {
