--- a/src/input.css
+++ b/src/input.css
@@ -19,7 +19,7 @@ nav {
     margin: 0 auto;
     @apply backdrop-blur-xl bg-white/80;
 }
-.hero {
+hero {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -30,6 +30,7 @@ nav {
     padding: 0 2rem;
     background-color: var(--primary-dark);
     @apply bg-gradient-to-b from-transparent to-black/20;
+    overflow: hidden;
 }
 
 .hero::before {
@@ -54,7 +55,9 @@ nav {
     z-index: -2;
     transform: scale(1);
     transition: transform 0.7s ease-out;
+    opacity: 1;
     @apply filter brightness-90;
+    backface-visibility: hidden;
 }
 
 .hero:hover img {
